# parlor

./: .gitignore  README.md
src/: index.html  pyproject.toml  server.py  tts.py
src/benchmarks/: benchmark_tts.py
